package composite;

public interface Trattamento {
    double calcolaCosto();
    String getDescrizione();
}
