package observer;

public interface Observer {
    void aggiorna(String statoOrdine);
}
