// CalcoloScontoStrategy.java
package strategy;

public interface CalcoloScontoStrategy {
    double applicaSconto(double prezzo);
}



